[package]
name = "thunder"
version = "0.1.0"
authors = ["Nikan Dalvand <nikandalvand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = { git = "https://github.com/actix/actix-web" }
futures= "*"