[package]
name = "thunder"
version = "0.1.0"
authors = ["Nikan Dalvand <nikandalvand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = { git = "https://github.com/actix/actix-web" }
futures= "*"
dotenv = "*"
serde = "1.0.101"
rust-crypto = "^0.2"
serde_json = "1.0.41"
r2d2 = "0.8"
r2d2_postgres = "*"
postgres = "0.16.0-rc.1"
